--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --tan-4: #D3C1AE;
   --orange: #F67F00;
   --text-light: #968c84;
-  --text-dark: #615954;
+  --text-dark: #605461;
 }
 
 *, *:before, *:after {
@@ -21,7 +21,7 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--tan-4);
+  background-color: rgb(166, 163, 163);
   padding: 2vmin;
   height: 100vh;
 }
@@ -121,7 +121,7 @@ button, a.button {
   margin: 1vmin;
   padding: 1vmin;
   color: var(--white);
-  background-color: var(--orange);
+  background-color: rgb(84, 74, 149);
   font-size: 2vmin;
   font-weight: bold;
   text-decoration: none;
@@ -150,5 +150,9 @@ button:disabled, form:invalid button[type="submit"] {
 button[type="submit"] {
   grid-column: span 2;
   margin: 1vmin 0 0;
+
 }
 
+.button:hover {
+  background-color: rgb(132, 78, 132);
+}
